--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,18 @@ form#form>div {
     margin-bottom: 1%;
 }
 
+.cardtext {
+    text-decoration: none;
+    color: black;
+}
+
+p.cardlinelimit {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}
+
 form#form>div>p {
     margin-bottom: 2px;
 }
