--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ nav {
     z-index: 1;
 }
 
+nav>div {
+    height: 44px;
+}
+
 nav#navigation>div>div>div>ul {
     display: flex;
     justify-content: flex-end;
@@ -32,6 +36,11 @@ nav#navigation>div>div>div>ul>li>a {
 nav#navigation>div>div>div>ul>li>a:hover {
     text-decoration: underline;
     color: white;
+}
+
+img#logo {
+    height: 20%;
+    margin: 2px;
 }
 
 div.notice {
