公開キーエリア改修
より目立つようにした

--- a/css/style.css
+++ b/css/style.css
@@ -178,10 +178,18 @@ div#dangerzone {
     padding: 0.5rem;
 }
 
+#pk-title::before {
+    content: "プチコン３号公開キー";
+}
+
 #public_key::before {
     content: "【";
 }
 
 #public_key::after {
     content: "】";
+}
+
+pre {
+    font-family: smilebasic;
 }
